# mURIel

./: .gitignore  .project  Android.mk  CMakeLists.txt  README.md
Debug/: makefile
Debug/src/: ByteRange.d  Url.d  subdir.mk
include/muriel/: BiMap.h  ByteRange.h  Macros.h  Schemes.h  Types.h  Url.h
src/: ByteRange.cpp  Url.cpp
